# drdb

./: .gitignore  Cargo.toml  README.md  clippy.toml
src/: errors.rs  lib.rs
src/data/: DBTableScan.rs  db_table_scan.rs  mod.rs
src/df_extension/: mod.rs  serialize.rs
src/df_extension/exec/: delete_exec.rs  mod.rs  scan_exec.rs
src/df_extension/node/: delete_node.rs  mod.rs
src/df_extension/planner/: delete_planner.rs  mod.rs  query_planner.rs
src/df_extension/provider/: drcatalog.rs  factory.rs  kvschema.rs  kvtable.rs  mod.rs
src/df_extension/rule/: delete_rule.rs  mod.rs
src/df_extension/sink/: kv.rs
src/df_extension/table_provider/: mod.rs  table_provider.rs
src/physical_plan/: db_table_delete.rs  db_table_scan.rs  mod.rs
src/storage/: kv.rs  mod.rs  serialize.rs
